--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ANURAG GURUBHETTI</title>
-    <meta name="description" content="Backend Developer specializing in Java, Spring Boot, and secure RESTful APIs. Full Stack Creator and API Security Specialist." />
-    <meta name="author" content="Anurag Gurubhetti" />
-    <meta name="keywords" content="Backend Developer, Java, Spring Boot, RESTful APIs, Full Stack, API Security, Portfolio" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ANURAG GURUBHETTI</title>
+  <meta name="description" content="Backend Developer specializing in Java, Spring Boot, and secure RESTful APIs. Full Stack Creator and API Security Specialist." />
+  <meta name="author" content="Anurag Gurubhetti" />
+  <meta name="keywords" content="Backend Developer, Java, Spring Boot, RESTful APIs, Full Stack, API Security, Portfolio" />
 
-    <meta property="og:title" content="ANURAG GURUBHETTI" />
-    <meta property="og:description" content="Backend Developer specializing in Java, Spring Boot, and secure RESTful APIs. Full Stack Creator and API Security Specialist." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="ANURAG GURUBHETTI" />
+  <meta property="og:description" content="Backend Developer specializing in Java, Spring Boot, and secure RESTful APIs. Full Stack Creator and API Security Specialist." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="canonical" href="https://kunal-katira-portfolio.netlify.app/" />
-    <link rel="icon" href="/lovable-uploads/ebba6251-0667-4b34-beb3-a71e497d3621.png" type="image/png">
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  
+  <!-- Canonical link: point to your GitHub Pages site instead of Netlify -->
+  <link rel="canonical" href="https://anuraggituser.github.io/ANG-Portfolio/" />
+
+  <!-- Favicon: use relative path instead of absolute -->
+  <link rel="icon" href="./lovable-uploads/ebba6251-0667-4b34-beb3-a71e497d3621.png" type="image/png">
+  
+  <!-- Make sure to include your CSS here with relative paths -->
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
 
   <body>
     <div id="root"></div>
